# cfm

./: .gitignore  Dockerfile  README.md  cfm.spec  compile.bat  create_package.bat  create_package.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  todo.txt
.github/: copilot-instructions.md
.github/workflows/: create-linux-application.yml  create-mac-application.yml  create-windows-application.yml  docker.yml  linux.yml  macos.yml  update_coverage.yml  windows.yml
camerafile/: AviMetaEdit.py  BatchTool.py  CameraFilesProcessor.py  ConsoleProgressBar.py  ConsoleTable.py  Constants.py  Copy.py  ExifTool.py  ExternalMetadata.py  FaceRecognition.py  Hash.py  Image.py  ImageTool.py  Logging.py  MediaCameraModel.py  MediaDirectory.py  MediaFile.py  MediaSet.py  MediaSetDatabase.py  Metadata.py  MetadataCameraModel.py  MetadataExternalFile.py  MetadataFaces.py  MetadataInternal.py  MetadataList.py  MetadataSignature.py  MetadataThumbnail.py  OutputDirectory.py  OutputFile.py  PdfFile.py  Resource.py  StandardOutputWrapper.py  __init__.py  cfm.py  py_installer_runtime_hook.py  test.py
camerafile/api/: ManagementApi.py
camerafile/conf/: cfm-linux.json  cfm-windows.json  (+2 more)
conf/: .specific-config.yml  cfm-windows.json  logging.json
examples/: pp.bat
face_recognition_models/: __init__.py
resources/: cfm  cfm.bat
tests/: test_media_set_trash.py
tools/: create_package.py
vivicfm/: AviMetaEdit.py  CameraFilesProcessor.py  ExifTool.py  ExternalMetadata.py  MediaCameraModel.py  MediaDate.py  MediaDirectory.py  MediaFile.py  OutputFile.py  cfm.py
(+117 files in other folders)
